<resources>
    <string name="app_name">Dungeon Sketch</string>
    <string name="preferences">com.tbocek.combatmap_preferences</string>
    <string name="save">Save</string>
    <string name="no_maps">
There are no saved maps to load.\n
Why not press "back" and create one?</string>
    <string name="font_size">Font Size (grid spaces):</string>
    <string name="background">Map</string>
    <string name="gm_notes">GM Notes</string>
    <string name="combat">Combat</string>
    <string name="annotations">Player Notes</string>
    <string name="save_map">Save Map</string>
    <string name="load">Load</string>
    <string name="new_map">New</string>
    <string name="confirm">Confirm</string>
    <string name="resize_grid">Resize Grid</string>
    <string name="snap_to_grid">Snap To Grid</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="delete_mask_region">Delete Mask Region</string>
    <string name="delete_token">Delete Token</string>
    <string name="resize_token">Resize Token</string>
    <string name="accept">Accept</string>
    <string name="change_image">Change Image</string>
    <string name="remove_tag">Remove Tag</string>
    <string name="new_token">New Token</string>
    <string name="new_tag">New Tag</string>
    <string name="theme">Theme</string>
    <string name="grid_type">Grid Type</string>
    <string name="fog_of_war_enabled">Mask Enabled</string>
    <string name="art_credits">Art Credits</string>
    <string name="about">About Dungeon Sketch</string>
    <string name="map_preview">Map Preview</string>
    <string name="draw_text">Draw Text</string>
    <string name="create">Create</string>
    <string name="filter_tokens">Filter Tokens</string>
    <string name="token_manager">Token Manager</string>
    <string name="autosave">Auto-Save</string>
    <string name="about_text">
        Dungeon Sketch Beta\n
        Written by Tim Bocek\n
        \n
        Licensed under the GNU Lesser General Public License, available at http://www.gnu.org/licenses/lgpl.html\n
        \n
        Uses the following libraries licensed under the Apache Software License 2.0, available at http://code.google.com/p/guava-libraries/:\n
        * Android APIs, available at http://source.android.com.\n
        * Guava Google Core Library, available at http://code.google.com/p/guava-libraries/.\n
        * Apache Commons Library, available at http://commons.apache.org.\n
        * Attenzione\'s ColorPickerPreference, available at https://github.com/attenzione/android-ColorPickerPreference/downloads.\n
        \n
        Uses the NanoHttpd library, licensed under a modified BSD licence.  Code and licence text available at https://github.com/NanoHttpd/nanohttpd.\n
        \n
        Uses icons from the Oxygen, available at http://www.oxygen-icons.org.\n
        Licensed under Creative Commons BY-SA 3.0, available at http://creativecommons.org/licenses/by-sa/3.0/.\n
        \n
        Not all token images are compatible with the LGPL.  They are provided for this distribution of the application only.  Please ensure that you have artist permission before redistributing these icons or including them in a commercial distribution of Dungeon Sketch.</string>
    <string name="gm_screen">GM Screen</string>
    <string name="gm_screen_explanation">        Provides a prompt when switching to the Map or GM Notes layers.  
        This is meant to prevent accidental spoilers, but will not stop players from snooping!</string>
    <string name="gm_screen_spoiler_warning">        The Game Master has enabled GM Screen.\n
        There may be spoilers if you continue!</string>
    <string name="gm_screen_mistchief_managed">I solemnly swear that I am up to no good!</string>
    <string name="gm_screen_cancel">Cancel</string>
    <string name="grid_appearence">Grid Appearance</string>
    <string name="add_to_tag">Add to tag</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="help">Help</string>
    <string name="token_database">Token Database</string>
    <string name="keep_aspect_ratio">Keep Aspect Ratio</string>
    <string name="mask_settings">Mask Settings</string>
    <string name="mask_tokens">Apply Mask to Tokens</string>
    <string name="mask_tokens_explanation">If checked, the background mask will also apply to tokens.  Use this to hide monsters you have placed in rooms that PCs haven\'t discovered yet.</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_beta">BetaActivity</string>
    <string name="import_data">Migrate Data</string>
    <string name="import_option_legacy_install">Legacy Install</string>
    <string name="import_option_google_play_version">Current Google Play version</string>
    <string name="import_from">Migrate From:</string>
    <string name="import_option_alpha_version">Alpha Version</string>
    <string name="import_option_beta_version">Beta Version</string>
    <string name="import_overwrite_existing">Overwrite Existing:</string>
    <string name="import_overwrite_tokens">Token Files</string>
    <string name="import_overwrite_maps">Maps</string>
    <string name="import_start">Migrate</string>
    <string name="import_overwrite_token_lib">Token Tag Settings</string>
    <string name="import_option_debug_version">Local Debugging Efforts</string>
    <string name="token_manager_active">Active</string>
    <string name="drawer_open">OPEN</string>
    <string name="drawer_close">CLOSE</string>
    <string name="disabled_tag_explanation"><b>This tag is deactivated.</b>\n
    • It will not appear in the tag list in the combat view.\n
    • If this is the only non-system tag it is added to, the token will not load at all (System tags include "built-in", "custom", "image", etc.)
    </string>
    <string name="deploy_tokens">Deploy Tokens</string>
    <string name="deploy">Deploy</string>
    <string name="bloodied">Bloodied</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="size">Size</string>
    <string name="border_color">Border Color</string>
    <string name="none">None</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="tenth">1/10</string>
    <string name="quarter">1/4</string>
    <string name="half">1/2</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="entire_map">Entire Map</string>
    <string name="current_view">Current View</string>
    <string name="include_grid_lines">Include Grid Lines</string>
    <string name="include_gm_notes">Include GM Notes</string>
    <string name="include_tokens">Include Tokens</string>
    <string name="include_annotations">Include Annotations</string>
    <string name="apply_mask">Apply Mask</string>
    <string name="export">Export</string>
    <string name="exported_images_location">Exported images will appear in sdcard/Pictures/DungeonSketch</string>
    <string name="top_level_tag">Top-Level Tag</string>
    <string name="theme_presets">Theme Presets</string>
    <string name="text_to_display">Text to display on map</string>
    <string name="map_name">Map name</string>
    <string name="new_tag_name">New tag name</string>
    <string name="back">Back</string>
    <string name="has_subtags">Has subtags</string>
    <string name="cancel">Cancel</string>
    <string name="token_image">Token Image</string>
    <string name="system_tag">System tag</string>
    <string name="background_color">Background Color</string>
    <string name="foreground_color">Foreground Color</string>
    <string name="info_point">Information Point</string>
    <string name="info_point_hint">Enter a room description, monster stats, epic loot, etc.\n\nAfter creating, long-press on a point to open it again.</string>
    <string name="export_image">Export Image</string>
    <string name="grid_properties">Grid Properties</string>
    <string name="activate_tag">Activate Tag</string>
    <string name="create_tag">Create Tag</string>
    <string name="snap_drawing_to_grid">Snap Drawing to Grid</string>
    <string name="snap_tokens_to_grid">Snap Tokens to Grid</string>
    <string name="snap_tokens_to_grid_lines">Tokens Snap to Grid Lines</string>
    <string name="app_info">App Info</string>
    <string name="data">Data</string>
    <string name="info_icon">Info icon</string>
    <string name="monster_icon">Monster icon</string>
    <string name="loot_icon">Loot icon</string>
    <string name="expand_collapse_bottom_frame">Expand or collapse bottom frame</string>
    <string name="media_route_menu_title">Media Route</string>
    <string name="export_name">Export Name</string>
    <string name="ellipsis">…</string>
    <string name="save_view">Save View</string>
    <string name="restore_view">Restore View</string>
    <string name="view">View</string>
    <string name="cast_view">Cast View</string>
    <string name="stop_casting_view">Stop Casting View</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="zooming_map_advisory">Zooming the map will control the exported resolution.</string>
    <string name="token_creator_help">Pinch to change the cut out region</string>
    <string name="token_creator_error">Couldn\'t load image</string>
    <string name="loading">Loading</string>
    <string name="loading_selected_image">Loading selected image.</string>
    <string name="please_wait">Please Wait</string>
    <string name="saving_token">Saving token</string>
    <string name="error_saving_token">Error saving token.</string>
    <string name="restore_all_default_tokens">Restore all default tokens</string>
    <string name="restore_all_default_tokens_summary">Restore all previously deleted default tokens to the token library.</string>
    <string name="migrate_data_summary">Copy data from another installed version of Dungeon Sketch.</string>
    <string name="confirm_restore_tokens_title">Confirm</string>
    <string name="confirm_restore_tokens_message">
        Are you sure you want to restore all default tokens to the token library?\n
        Custom tokens will NOT be deleted.
    </string>
    <string name="import_data_alert_message">Found another version of Dungeon Sketch.  Do you want to import data?</string>
    <string name="import_data_alert_title">Import Data?</string>
    <string name="square_size">Square Size</string>
    <string name="copy">Copy</string>
    <string name="info_creation_failed">Info point creation failed. :(</string>
    <string name="text_creation_failed">On-sceen text creation failed. :(</string>
    <string name="map_error_report">Oops!  It looks like your map failed to load correctly.  Dungeon Sketch has attempted to recover to the best of its ability, but the developer would appreciate a report of this incident.  Would you like to email a report containing your map and a description of the errors?</string>
    <string name="report_via_email">Report Via Email</string>
    <string name="dont_report">Don\'t Report</string>
    <string name="error_email_subject">Bad Dungeon Sketch Map</string>
    <string name="attachment_issue">Couldn\'t attach map file</string>
    <string name="error_email_destination">tim.bocek@gmail.com</string>
    <string name="measure">Measure</string>
    <string name="measure_stop">Stop Measuring</string>
    <string name="dice">Dice</string>
    <string name="percent">%</string>
    <string name="clear">CLR</string>
    <string name="delete_selection">Delete Selection</string>
</resources>