<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/token_action_mode_bloodied" android:checkable="true" android:title="@string/bloodied"/>
    <item android:id="@+id/token_action_mode_delete" android:title="@string/delete"/>
    <item android:id="@+id/token_action_mode_size" android:title="@string/size">
        <menu>
            <group android:id="@+id/token_action_mode_size_group" android:checkableBehavior="single">
                <item android:id="@+id/token_action_mode_size_tenth" android:title="@string/tenth"/>
                <item android:id="@+id/token_action_mode_size_quarter" android:title="@string/quarter"/>
                <item android:id="@+id/token_action_mode_size_half" android:title="@string/half"/>
                <item android:id="@+id/token_action_mode_size_1" android:title="@string/one"/>
                <item android:id="@+id/token_action_mode_size_2" android:title="@string/two"/>
                <item android:id="@+id/token_action_mode_size_3" android:title="@string/three"/>
                <item android:id="@+id/token_action_mode_size_4" android:title="@string/four"/>
                <item android:id="@+id/token_action_mode_size_5" android:title="@string/five"/>
                <item android:id="@+id/token_action_mode_size_6" android:title="@string/six"/>
            </group>
        </menu>
    </item>
    <item android:id="@+id/token_action_mode_border_color" android:title="@string/border_color">
        <menu>
            <group android:id="@+id/token_action_mode_border_color_group" android:checkableBehavior="single">
                <item android:id="@+id/token_action_mode_border_color_none" android:title="@string/none"/>
                <item android:id="@+id/token_action_mode_border_color_white" android:title="@string/white"/>
                <item android:id="@+id/token_action_mode_border_color_blue" android:title="@string/blue"/>
                <item android:id="@+id/token_action_mode_border_color_black" android:title="@string/black"/>
                <item android:id="@+id/token_action_mode_border_color_red" android:title="@string/red"/>
                <item android:id="@+id/token_action_mode_border_color_green" android:title="@string/green"/>
                <item android:id="@+id/token_action_mode_border_color_yellow" android:title="@string/yellow"/>
            </group>
        </menu>
    </item>
    

</menu>