<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:abc="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/token_manager_new_token"
        abc:showAsAction="always|withText"
        android:title="@string/new_token">
    </item>
    <item
        android:id="@+id/token_manager_new_tag"
        abc:showAsAction="ifRoom|withText"
        android:title="@string/new_tag">
    </item>
    <item android:id="@+id/token_manager_delete_tag" android:title="@string/delete_tag" abc:showAsAction="ifRoom|withText"></item>
    <item android:id="@+id/token_manager_is_active" android:checkable="true" android:title="@string/token_manager_active" android:checked="true"></item><item android:id="@+id/token_manager_help" android:title="@string/help" abc:showAsAction="never"></item>
</menu>