<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:text="Export Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_export_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        </EditText>
        
    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_export_full_map"
            android:text="@string/entire_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/radio_export_current_view"
            android:text="@string/current_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>        
    </RadioGroup>
    <CheckBox
        android:id="@+id/checkbox_export_grid_lines"
        android:text="@string/include_grid_lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/checkbox_export_gm_notes"
        android:text="@string/include_gm_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/checkbox_export_tokens"
        android:text="@string/include_tokens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/checkbox_export_annotations"
        android:text="@string/include_annotations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/checkbox_export_fog_of_war"
        android:text="@string/apply_mask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>        
    <Button
        android:id="@+id/button_export"
        android:text="@string/export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView 
        android:text="@string/exported_images_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
